--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -1,7 +1,7 @@
 <html>
    <head>
       <meta name="viewport" content="width=device-width,height=device-height,initial-scale=1.0">
-      <title>Cellosign - Gil Halperin</title>
+      <title>Page Title</title>
       <link rel="stylesheet" href="/static/style.css">
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"
          integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
